--- a/app/assets/styles/custom.css
+++ b/app/assets/styles/custom.css
@@ -3,5 +3,10 @@
   width: 100%;
   height: 400px;
   overflow: hidden;
+}
 
+@media screen and (min-width: 960px) {
+    .snackbarMtBottom {
+      margin-bottom: 50px;
+    }
 }
